# apps/platform-core/src/modules/order/dto/mod.rs
@@ -1,10 +1,14 @@
 mod order_cancel;
+mod order_contract_confirm;
 mod order_create;
 mod order_read;
 mod pre_request;
 mod price_snapshot;
 
 pub use order_cancel::{CancelOrderResponse, CancelOrderResponseData};
+pub use order_contract_confirm::{
+    ConfirmOrderContractRequest, ConfirmOrderContractResponse, ConfirmOrderContractResponseData,
+};
 pub use order_create::{CreateOrderRequest, CreateOrderResponse, CreateOrderResponseData};
 pub use order_read::{GetOrderDetailResponse, GetOrderDetailResponseData};
 pub use pre_request::{
